# 23_crewai_basico

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/basico/: crew.py  custom_agent.py  main.py  my_llm.py
