[project]
name = "basico"
version = "0.1.0"
description = "basico using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
basico = "basico.main:run"
run_crew = "basico.main:run"
train = "basico.main:train"
replay = "basico.main:replay"
test = "basico.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
